--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -12,7 +12,7 @@
 <li><a href="../pt-br/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de propriedades (12% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de propriet&#259;&#539;i (0% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="../cs/Property_View.html" class="mw-pt-progress mw-pt-progress--med" title="Zobrazen&iacute; vlastnost&iacute; (46% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="../cs/Property_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Zobrazen&iacute; vlastnost&iacute; (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074; (12% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -30,11 +30,8 @@
 </p>
 <h2><span id=".D0.9E.D0.B1.D1.89_.D0.BF.D1.80.D0.B5.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;_&#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;">&#1054;&#1073;&#1097; &#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;</span></h2>
 <p><a class="mw-selflink selflink">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a> &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072; &#1074; &#1076;&#1086;&#1083;&#1085;&#1080;&#1103; &#1088;&#1072;&#1079;&#1076;&#1077;&#1083; &#1085;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083;&#1072; "<i>Model'</i> (&#1072;&#1082;&#1086; <a href="../Combo_View.html" title="Combo View">Combo View</a> &#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1077;&#1085;) &#1080;&#1083;&#1080; &#1082;&#1072;&#1090;&#1086; &#1089;&#1072;&#1084;&#1086;&#1089;&#1090;&#1086;&#1103;&#1090;&#1077;&#1083;&#1077;&#1085; &#1087;&#1072;&#1085;&#1077;&#1083;.
+</p><p>&#1054;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1098;&#1090; &#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1077; &#1087;&#1088;&#1077;&#1076;&#1085;&#1072;&#1079;&#1085;&#1072;&#1095;&#1077;&#1085; &#1076;&#1072; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1077;&#1076;&#1080;&#1085; &#1086;&#1073;&#1077;&#1082;&#1090; &#1074; &#1076;&#1072;&#1076;&#1077;&#1085; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;. &#1057;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090;&#1080;&#1090;&#1077;, &#1087;&#1086;&#1082;&#1072;&#1079;&#1072;&#1085;&#1080; &#1074; &#1085;&#1077;&#1075;&#1086;, &#1087;&#1088;&#1080;&#1085;&#1072;&#1076;&#1083;&#1077;&#1078;&#1072;&#1090; &#1085;&#1072; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1042;&#1098;&#1087;&#1088;&#1077;&#1082;&#1080; &#1090;&#1086;&#1074;&#1072;, &#1085;&#1103;&#1082;&#1086;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1082;&#1072;&#1090;&#1086; &#1094;&#1074;&#1077;&#1090;&#1086;&#1074;&#1077; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1079;&#1072;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1079;&#1072; &#1084;&#1085;&#1086;&#1078;&#1077;&#1089;&#1090;&#1074;&#1086; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;. &#1040;&#1082;&#1086; &#1085;&#1077; &#1077; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;, &#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;&#1098;&#1090; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1077; &#1087;&#1088;&#1072;&#1079;&#1077;&#1085;.
 </p>
-<div class="mw-translate-fuzzy">
-<p>&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1072; &#1074;&#1080; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1089;&#1072;&#1084;&#1086; &#1085;&#1072; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1103; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;, &#1074; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;&#1103; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; (&#1074;&#1085;&#1080;&#1084;&#1072;&#1074;&#1072;&#1081;&#1090;&#1077; &#1082;&#1086;&#1080; &#1077; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;&#1103; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;, &#1072;&#1082;&#1086; &#1080;&#1084;&#1072;&#1090;&#1077; &#1085;&#1103;&#1082;&#1086;&#1083;&#1082;&#1086; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072; &#1086;&#1090;&#1074;&#1086;&#1088;&#1077;&#1085;&#1080;). &#1040;&#1082;&#1086; &#1085;&#1077; &#1089;&#1090;&#1077; &#1080;&#1079;&#1073;&#1088;&#1072;&#1083;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090; (&#1080;&#1083;&#1080; &#1085;&#1103;&#1084;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;), &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1072; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1097;&#1077; &#1077; &#1087;&#1088;&#1072;&#1079;&#1077;&#1085;.
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>&#1053;&#1077; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085;&#1080; &#1074;&#1098;&#1074; &#1074;&#1089;&#1077;&#1082;&#1080; &#1077;&#1076;&#1080;&#1085; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;. &#1042; &#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084;&#1086;&#1089;&#1090; &#1086;&#1090; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1072; &#1085;&#1103;&#1082;&#1086;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1085;&#1103;&#1084;&#1072; &#1076;&#1072; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1089;&#1077; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1103;&#1090;.
 </p>
@@ -209,35 +206,35 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118050131
+Cached time: 20260123171801
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.162 seconds
-Real time usage: 0.205 seconds
-Preprocessor visited node count: 708/1000000
+CPU time usage: 0.147 seconds
+Real time usage: 0.239 seconds
+Preprocessor visited node count: 707/1000000
 Post&#8208;expand include size: 33491/2097152 bytes
 Template argument size: 12486/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3966/5000000 bytes
+Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.188      1 -total
- 27.27%   12.048      1 Template:Std_Base_navi/bg
- 21.59%    9.539      3 Template:Navigation_menu_2
- 12.93%    5.714      1 Template:Interface_navi/bg
- 11.13%    4.920      1 Template:Userdocnavi/bg
-  6.66%    2.944      1 Template:PropertyData
-  5.51%    2.436      1 Template:Property/bg
-  5.41%    2.391      2 Template:Docnav
-  4.48%    1.979     26 Template:MenuCommand
-  3.85%    1.701      1 Template:Code
+100.00%   61.537      1 -total
+ 15.45%    9.508      1 Template:Std_Base_navi/bg
+ 15.01%    9.238      3 Template:Navigation_menu_2
+ 11.71%    7.205      1 Template:Interface_navi/bg
+ 10.22%    6.289      1 Template:Userdocnavi/bg
+  9.67%    5.952      2 Template:Docnav
+  6.89%    4.242      1 Template:Property/bg
+  6.61%    4.065      1 Template:Caption
+  6.25%    3.847      1 Template:TOCright
+  5.62%    3.457      1 Template:PropertyData
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260118050131 and revision id 1737590. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123171800 and revision id 1743091. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
