--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -31,12 +31,8 @@
 <h2><span id=".D0.9E.D0.B1.D1.89_.D0.BF.D1.80.D0.B5.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;_&#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;">&#1054;&#1073;&#1097; &#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;</span></h2>
 <p><a class="mw-selflink selflink">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a> &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072; &#1074; &#1076;&#1086;&#1083;&#1085;&#1080;&#1103; &#1088;&#1072;&#1079;&#1076;&#1077;&#1083; &#1085;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083;&#1072; "<i>Model'</i> (&#1072;&#1082;&#1086; <a href="../Combo_View.html" title="Combo View">Combo View</a> &#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1077;&#1085;) &#1080;&#1083;&#1080; &#1082;&#1072;&#1090;&#1086; &#1089;&#1072;&#1084;&#1086;&#1089;&#1090;&#1086;&#1103;&#1090;&#1077;&#1083;&#1077;&#1085; &#1087;&#1072;&#1085;&#1077;&#1083;.
 </p><p>&#1054;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1098;&#1090; &#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1077; &#1087;&#1088;&#1077;&#1076;&#1085;&#1072;&#1079;&#1085;&#1072;&#1095;&#1077;&#1085; &#1076;&#1072; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1077;&#1076;&#1080;&#1085; &#1086;&#1073;&#1077;&#1082;&#1090; &#1074; &#1076;&#1072;&#1076;&#1077;&#1085; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;. &#1057;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090;&#1080;&#1090;&#1077;, &#1087;&#1086;&#1082;&#1072;&#1079;&#1072;&#1085;&#1080; &#1074; &#1085;&#1077;&#1075;&#1086;, &#1087;&#1088;&#1080;&#1085;&#1072;&#1076;&#1083;&#1077;&#1078;&#1072;&#1090; &#1085;&#1072; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1042;&#1098;&#1087;&#1088;&#1077;&#1082;&#1080; &#1090;&#1086;&#1074;&#1072;, &#1085;&#1103;&#1082;&#1086;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1082;&#1072;&#1090;&#1086; &#1094;&#1074;&#1077;&#1090;&#1086;&#1074;&#1077; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1079;&#1072;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1079;&#1072; &#1084;&#1085;&#1086;&#1078;&#1077;&#1089;&#1090;&#1074;&#1086; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;. &#1040;&#1082;&#1086; &#1085;&#1077; &#1077; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;, &#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;&#1098;&#1090; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1077; &#1087;&#1088;&#1072;&#1079;&#1077;&#1085;.
-</p>
-<div class="mw-translate-fuzzy">
-<p>&#1053;&#1077; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085;&#1080; &#1074;&#1098;&#1074; &#1074;&#1089;&#1077;&#1082;&#1080; &#1077;&#1076;&#1080;&#1085; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;. &#1042; &#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084;&#1086;&#1089;&#1090; &#1086;&#1090; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1072; &#1085;&#1103;&#1082;&#1086;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1085;&#1103;&#1084;&#1072; &#1076;&#1072; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1089;&#1077; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1103;&#1090;.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Property_editor_Data.png&amp;filetimestamp=20240716133440&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Property_editor_Data.png" decoding="async" width="300" height="456" class="mw-file-element" data-file-width="373" data-file-height="567"></a></span>
+</p><p>&#1053;&#1077; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1084;&#1086;&#1076;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1085;&#1080;, &#1085;&#1103;&#1082;&#1086;&#1080; &#1089;&#1072; &#1089;&#1072;&#1084;&#1086; &#1079;&#1072; &#1095;&#1077;&#1090;&#1077;&#1085;&#1077;.
+</p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Property_editor_Data.png&amp;filetimestamp=20240716133440&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Property_editor_Data.png" decoding="async" width="300" height="456" class="mw-file-element" data-file-width="373" data-file-height="567"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The Data properties of a <a href="../Part_Box.html" title="Part Box">Part Box</a></p>
 <p><span id="Property_types"></span>
@@ -206,13 +202,13 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123171801
+Cached time: 20260123171834
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.147 seconds
-Real time usage: 0.239 seconds
-Preprocessor visited node count: 707/1000000
+CPU time usage: 0.130 seconds
+Real time usage: 0.325 seconds
+Preprocessor visited node count: 706/1000000
 Post&#8208;expand include size: 33491/2097152 bytes
 Template argument size: 12486/2097152 bytes
 Highest expansion depth: 7/100
@@ -222,19 +218,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   61.537      1 -total
- 15.45%    9.508      1 Template:Std_Base_navi/bg
- 15.01%    9.238      3 Template:Navigation_menu_2
- 11.71%    7.205      1 Template:Interface_navi/bg
- 10.22%    6.289      1 Template:Userdocnavi/bg
-  9.67%    5.952      2 Template:Docnav
-  6.89%    4.242      1 Template:Property/bg
-  6.61%    4.065      1 Template:Caption
-  6.25%    3.847      1 Template:TOCright
-  5.62%    3.457      1 Template:PropertyData
+100.00%   90.698      1 -total
+ 37.14%   33.685      1 Template:Interface_navi/bg
+ 19.08%   17.307      3 Template:Navigation_menu_2
+ 13.26%   12.027      1 Template:Std_Base_navi/bg
+  8.61%    7.810      1 Template:Userdocnavi/bg
+  7.73%    7.015      1 Template:PropertyData
+  4.75%    4.312      2 Template:Docnav
+  3.96%    3.596      1 Template:Property/bg
+  3.95%    3.582      1 Template:Variable
+  3.81%    3.458     26 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123171800 and revision id 1743091. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123171834 and revision id 1743093. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
