--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -202,12 +202,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123171834
+Cached time: 20260123171852
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.325 seconds
+CPU time usage: 0.128 seconds
+Real time usage: 0.188 seconds
 Preprocessor visited node count: 706/1000000
 Post&#8208;expand include size: 33491/2097152 bytes
 Template argument size: 12486/2097152 bytes
@@ -218,19 +218,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   90.698      1 -total
- 37.14%   33.685      1 Template:Interface_navi/bg
- 19.08%   17.307      3 Template:Navigation_menu_2
- 13.26%   12.027      1 Template:Std_Base_navi/bg
-  8.61%    7.810      1 Template:Userdocnavi/bg
-  7.73%    7.015      1 Template:PropertyData
-  4.75%    4.312      2 Template:Docnav
-  3.96%    3.596      1 Template:Property/bg
-  3.95%    3.582      1 Template:Variable
-  3.81%    3.458     26 Template:MenuCommand
+100.00%   44.559      1 -total
+ 19.63%    8.749      1 Template:Std_Base_navi/bg
+ 17.05%    7.598      3 Template:Navigation_menu_2
+ 14.04%    6.257      1 Template:Userdocnavi/bg
+ 13.36%    5.954      1 Template:Interface_navi/bg
+  9.46%    4.214      1 Template:PropertyData
+  5.19%    2.311      1 Template:Variable
+  5.14%    2.290      2 Template:Docnav
+  4.64%    2.069      1 Template:Property/bg
+  4.26%    1.897      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123171834 and revision id 1743093. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123171852 and revision id 1743093. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
