--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -13,7 +13,7 @@
 <li><a href="../ro/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de propriet&#259;&#539;i (0% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="../cs/Property_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Zobrazen&iacute; vlastnost&iacute; (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074; (12% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh-cn/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="&#23646;&#24615;&#32534;&#36753;&#22120; (0% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
@@ -37,43 +37,7 @@
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The Data properties of a <a href="../Part_Box.html" title="Part Box">Part Box</a></p>
 <p><span id="Property_types"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span id=".D0.94.D0.B5.D1.84.D0.B8.D0.BD.D0.B8.D1.86.D0.B8.D1.8F_.D0.BD.D0.B0_.D1.81.D0.B2.D0.BE.D0.B9.D1.81.D1.82.D0.B2.D0.BE_.D0.BD.D0.B0_.D0.BE.D0.B1.D0.B5.D0.BA.D1.82"></span><span class="mw-headline" id="&#1044;&#1077;&#1092;&#1080;&#1085;&#1080;&#1094;&#1080;&#1103;_&#1085;&#1072;_&#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086;_&#1085;&#1072;_&#1086;&#1073;&#1077;&#1082;&#1090;">&#1044;&#1077;&#1092;&#1080;&#1085;&#1080;&#1094;&#1080;&#1103; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;</span></h2>
-<p>"&#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;" &#1077; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; (&#1095;&#1080;&#1089;&#1083;&#1086;, &#1090;&#1077;&#1082;&#1089;&#1090;) &#1089;&#1074;&#1088;&#1098;&#1079;&#1072;&#1085;&#1086; &#1089; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085; &#1086;&#1073;&#1077;&#1082;&#1090; &#1074; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; &#1085;&#1072; FreeCAD document or an object in a document. &#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1089;&#1077; &#1074;&#1080;&#1078;&#1076;&#1072;&#1090;, &#1080; &#1072;&#1082;&#1086; &#1077; &#1088;&#1072;&#1079;&#1088;&#1077;&#1096;&#1077;&#1085;&#1086; &#1074; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1085;&#1080;&#1103; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;, &#1076;&#1072; &#1089;&#1077; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1103;&#1090; &#1089; <a href="../bg/Property_editor.html" class="mw-redirect" title="Property editor/bg">&#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1098;&#1090; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a>.
-</p><p>&#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1080;&#1075;&#1088;&#1072;&#1103;&#1090; &#1074;&#1072;&#1078;&#1085;&#1072; &#1088;&#1086;&#1083;&#1103; &#1074; FreeCAD, &#1090;&#1098;&#1081; &#1082;&#1072;&#1090;&#1086; &#1090;&#1077; &#1089;&#1072; &#1086;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;&#1103; &#1084;&#1077;&#1093;&#1072;&#1085;&#1080;&#1079;&#1098;&#1084; &#1079;&#1072; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1103;&#1085;&#1077; &#1085;&#1072; &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1090;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;. &#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1103;&#1090; &#1090;&#1086;&#1095;&#1085;&#1072;&#1090;&#1072; &#1092;&#1086;&#1088;&#1084;&#1072; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;.
-</p><p><a href="../index.php?title=Scripted_objects/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Scripted objects/bg (page does not exist)">&#1057;&#1082;&#1088;&#1080;&#1087;&#1090;&#1080;&#1088;&#1072;&#1085;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;</a> &#1074; FreeCAD &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1080;&#1084;&#1072;&#1090; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1086;&#1090; &#1089;&#1083;&#1077;&#1076;&#1085;&#1080;&#1090;&#1077; &#1090;&#1080;&#1087;&#1086;&#1074;&#1077;:
-</p>
-<pre>Boolean
-Float
-FloatList
-FloatConstraint
-Angle
-Distance
-Integer
-IntegerConstraint
-Percent
-Enumeration
-IntegerList
-String
-StringList
-Link
-LinkList
-Matrix
-Vector
-VectorList
-Placement
-PlacementLink
-Color
-ColorList
-Material
-Path
-File
-FileIncluded
-PartShape
-FilletContour
-Circle
-</pre>
-</div>
+<h2><span id=".D0.A2.D0.B8.D0.BF.D0.BE.D0.B2.D0.B5_.D0.BD.D0.B0_.D1.81.D0.B2.D0.BE.D0.B9.D1.81.D1.82.D0.B2.D0.B0.D1.82.D0.B0"></span><span class="mw-headline" id="&#1058;&#1080;&#1087;&#1086;&#1074;&#1077;_&#1085;&#1072;_&#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;">&#1058;&#1080;&#1087;&#1086;&#1074;&#1077; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</span></h2>
 <p>A property is a piece of information like a number or a text string that is attached to a FreeCAD document or an object in the document. Many  property types are available. Some of the most common types are:
 </p>
 <div class="mw-highlight mw-highlight-lang-text mw-content-ltr" dir="ltr"><pre><span></span>App::PropertyAngle
@@ -202,14 +166,14 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123171852
+Cached time: 20260123171937
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.188 seconds
-Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 33491/2097152 bytes
+CPU time usage: 0.131 seconds
+Real time usage: 0.596 seconds
+Preprocessor visited node count: 701/1000000
+Post&#8208;expand include size: 32306/2097152 bytes
 Template argument size: 12486/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
@@ -218,19 +182,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.559      1 -total
- 19.63%    8.749      1 Template:Std_Base_navi/bg
- 17.05%    7.598      3 Template:Navigation_menu_2
- 14.04%    6.257      1 Template:Userdocnavi/bg
- 13.36%    5.954      1 Template:Interface_navi/bg
-  9.46%    4.214      1 Template:PropertyData
-  5.19%    2.311      1 Template:Variable
-  5.14%    2.290      2 Template:Docnav
-  4.64%    2.069      1 Template:Property/bg
-  4.26%    1.897      1 Template:Code
+100.00%  141.072      1 -total
+ 17.60%   24.828      1 Template:Userdocnavi/bg
+ 15.00%   21.165      1 Template:Interface_navi/bg
+ 12.89%   18.179      1 Template:Std_Base_navi/bg
+  8.94%   12.607      1 Template:PropertyData
+  8.44%   11.912      2 Template:Docnav
+  7.78%   10.969      2 Template:Value
+  6.97%    9.832      3 Template:Navigation_menu_2
+  6.25%    8.814      6 Template:Incode
+  5.81%    8.193     26 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123171852 and revision id 1743093. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123171937 and revision id 1743096. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
