--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -38,7 +38,7 @@
 <p><span id="Property_types"></span>
 </p>
 <h2><span id=".D0.A2.D0.B8.D0.BF.D0.BE.D0.B2.D0.B5_.D0.BD.D0.B0_.D1.81.D0.B2.D0.BE.D0.B9.D1.81.D1.82.D0.B2.D0.B0.D1.82.D0.B0"></span><span class="mw-headline" id="&#1058;&#1080;&#1087;&#1086;&#1074;&#1077;_&#1085;&#1072;_&#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;">&#1058;&#1080;&#1087;&#1086;&#1074;&#1077; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</span></h2>
-<p>A property is a piece of information like a number or a text string that is attached to a FreeCAD document or an object in the document. Many  property types are available. Some of the most common types are:
+<p>&#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086;&#1090;&#1086; &#1077; &#1095;&#1072;&#1089;&#1090; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1082;&#1072;&#1090;&#1086; &#1095;&#1080;&#1089;&#1083;&#1086; &#1080;&#1083;&#1080; &#1090;&#1077;&#1082;&#1089;&#1090;&#1086;&#1074; &#1085;&#1080;&#1079;, &#1082;&#1086;&#1103;&#1090;&#1086; &#1089;&#1077; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072; &#1074; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; &#1085;&#1072; FreeCAD &#1080;&#1083;&#1080; &#1074; &#1086;&#1073;&#1077;&#1082;&#1090; &#1074; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;. &#1044;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1080; &#1089;&#1077; &#1084;&#1085;&#1086;&#1075;&#1086; &#1090;&#1080;&#1087;&#1086;&#1074;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;. &#1053;&#1103;&#1082;&#1086;&#1080; &#1086;&#1090; &#1085;&#1072;&#1081;-&#1095;&#1077;&#1089;&#1090;&#1086; &#1089;&#1088;&#1077;&#1097;&#1072;&#1085;&#1080;&#1090;&#1077; &#1090;&#1080;&#1087;&#1086;&#1074;&#1077; &#1089;&#1072;:
 </p>
 <div class="mw-highlight mw-highlight-lang-text mw-content-ltr" dir="ltr"><pre><span></span>App::PropertyAngle
 App::PropertyBool
@@ -166,12 +166,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123171937
+Cached time: 20260123172226
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
-Real time usage: 0.596 seconds
+CPU time usage: 0.104 seconds
+Real time usage: 0.164 seconds
 Preprocessor visited node count: 701/1000000
 Post&#8208;expand include size: 32306/2097152 bytes
 Template argument size: 12486/2097152 bytes
@@ -182,19 +182,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  141.072      1 -total
- 17.60%   24.828      1 Template:Userdocnavi/bg
- 15.00%   21.165      1 Template:Interface_navi/bg
- 12.89%   18.179      1 Template:Std_Base_navi/bg
-  8.94%   12.607      1 Template:PropertyData
-  8.44%   11.912      2 Template:Docnav
-  7.78%   10.969      2 Template:Value
-  6.97%    9.832      3 Template:Navigation_menu_2
-  6.25%    8.814      6 Template:Incode
-  5.81%    8.193     26 Template:MenuCommand
+100.00%   41.262      1 -total
+ 20.62%    8.507      1 Template:Std_Base_navi/bg
+ 16.23%    6.698      3 Template:Navigation_menu_2
+ 15.80%    6.519      1 Template:Interface_navi/bg
+  9.30%    3.837      1 Template:Userdocnavi/bg
+  8.06%    3.327      1 Template:PropertyData
+  6.52%    2.692      2 Template:Docnav
+  6.19%    2.555     26 Template:MenuCommand
+  5.72%    2.358      2 Template:Value
+  4.99%    2.059      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123171937 and revision id 1743096. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123172226 and revision id 1743098. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
