--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -50,7 +50,9 @@ App::PropertyPlacement
 App::PropertyString
 App::PropertyVector
 </pre></div>
-<h2><span class="mw-headline" id="View_and_Data_properties">View and Data properties</span></h2>
+<p><span id="View_and_Data_properties"></span>
+</p>
+<h2><span id=".D0.A1.D0.B2.D0.BE.D0.B9.D1.81.D1.82.D0.B2.D0.B0_.D0.B8.D0.B7.D0.B3.D0.BB.D0.B5.D0.B4_.28View.29_.D0.B8_.D0.B4.D0.B0.D0.BD.D0.BD.D0.B8_.28Data.29"></span><span class="mw-headline" id="&#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;_&#1080;&#1079;&#1075;&#1083;&#1077;&#1076;_(View)_&#1080;_&#1076;&#1072;&#1085;&#1085;&#1080;_(Data)">&#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; (View) &#1080; &#1076;&#1072;&#1085;&#1085;&#1080; (Data)</span></h2>
 <p>The Property View has two tabs giving access to two classes of properties:
 </p>
 <ul><li><b>Data</b> properties, related to the "physical" parameters of the object. The <b>Data</b> properties define the essential characteristics of the object. They exist at all times, even when FreeCAD is used in console mode, or as a library. This means that if you load a document in console mode, you can edit the radius of a circle or the length of a line, even if you cannot see the result on the screen.</li>
@@ -166,13 +168,13 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123172226
+Cached time: 20260123172431
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.164 seconds
-Preprocessor visited node count: 701/1000000
+CPU time usage: 0.126 seconds
+Real time usage: 0.180 seconds
+Preprocessor visited node count: 702/1000000
 Post&#8208;expand include size: 32306/2097152 bytes
 Template argument size: 12486/2097152 bytes
 Highest expansion depth: 7/100
@@ -182,19 +184,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.262      1 -total
- 20.62%    8.507      1 Template:Std_Base_navi/bg
- 16.23%    6.698      3 Template:Navigation_menu_2
- 15.80%    6.519      1 Template:Interface_navi/bg
-  9.30%    3.837      1 Template:Userdocnavi/bg
-  8.06%    3.327      1 Template:PropertyData
-  6.52%    2.692      2 Template:Docnav
-  6.19%    2.555     26 Template:MenuCommand
-  5.72%    2.358      2 Template:Value
-  4.99%    2.059      1 Template:Code
+100.00%   45.210      1 -total
+ 21.38%    9.666      1 Template:Std_Base_navi/bg
+ 16.68%    7.542      3 Template:Navigation_menu_2
+ 14.97%    6.768      1 Template:Interface_navi/bg
+ 11.95%    5.404      1 Template:Userdocnavi/bg
+  8.23%    3.721      1 Template:PropertyData
+  6.66%    3.013      2 Template:Value
+  5.82%    2.633      2 Template:Docnav
+  4.27%    1.931      1 Template:Variable
+  4.21%    1.903      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123172226 and revision id 1743098. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123172430 and revision id 1743100. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
